@@ -72,6 +72,8 @@ enable_replay = true
 ; The folder where replays will be kept.
 replays_folder = replays
 
+; Darken those parts of the screen that are not near a torch.
+enable_lighting = false
 
 
 [Enhancements]
